--- a/dev/scss/sections/_famous-pigs.scss
+++ b/dev/scss/sections/_famous-pigs.scss
@@ -67,8 +67,20 @@
         // padding-right: 10%;
         padding-bottom: 30%;
 
+
+        #flex-spacing-1{
+            width: 50vw;
+            height: 100%;
+            background-color: red;
+        }
+        #flex-spacing-2{
+            width: 50vw;
+            height: 100%;
+            background-color: red;
+        }
+
         .famous-pigs-img{
-            width: 50vh;
+            width: 30vw;
         }
         
         .imgdiv{
